working example with deskewing

--- a/hough.ipynb
+++ b/hough.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
        "(3505, 2480)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
        "True"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
        "True"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -153,76 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "v 90.0 90.0 0.0\n",
-      "\n",
-      "90.0\n",
-      "h 0.0 0.0 0.0\n",
-      "\n",
-      "0.0\n",
-      "v 270.0 90.0 0.0\n",
-      "\n",
-      "90.0\n",
-      "h 180.0 0.0 0.0\n",
-      "\n",
-      "0.0\n",
-      "v -90.0 90.0 0.0\n",
-      "\n",
-      "90.0\n",
-      "h 0.0 0.0 0.0\n",
-      "\n",
-      "0.0\n",
-      "v -270.0 90.0 0.0\n",
-      "\n",
-      "90.0\n",
-      "h -180.0 0.0 0.0\n",
-      "\n",
-      "-5.729577951308237\n",
-      "v 95.72957795130824 95.72957795130824 -5.729577951308237\n",
-      "\n",
-      "84.27042204869176\n",
-      "h 5.729577951308233 5.729577951308233 -5.729577951308237\n",
-      "\n",
-      "-5.729577951308212\n",
-      "v 275.7295779513082 95.72957795130822 -5.729577951308212\n",
-      "\n",
-      "84.27042204869176\n",
-      "h 185.72957795130824 5.729577951308237 -5.729577951308237\n",
-      "\n",
-      "5.729577951308237\n",
-      "v 84.27042204869176 84.27042204869176 5.729577951308237\n",
-      "\n",
-      "-84.27042204869176\n",
-      "h -5.729577951308233 174.27042204869176 5.729577951308237\n",
-      "\n",
-      "5.729577951308212\n",
-      "v 264.2704220486918 84.27042204869178 5.729577951308212\n",
-      "\n",
-      "-84.27042204869176\n",
-      "h 174.27042204869176 174.27042204869176 5.729577951308237\n",
-      "\n",
-      "5.729577951308237\n",
-      "v -95.72957795130824 84.27042204869176 5.729577951308237\n",
-      "\n",
-      "-84.27042204869176\n",
-      "h -5.729577951308233 174.27042204869176 5.729577951308237\n",
-      "\n",
-      "5.729577951308212\n",
-      "v -275.7295779513082 84.27042204869178 5.729577951308212\n",
-      "\n",
-      "-84.27042204869176\n",
-      "h -185.72957795130824 174.27042204869176 5.729577951308237\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(-0.7199950566895569, 0.0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -242,28 +186,31 @@
     "pihlf = np.pi / 2\n",
     "pi4th = np.pi / 4\n",
     "\n",
-    "lines = (\n",
-    "    ((1, pihlf), ),  # up\n",
-    "    ((1, 0), ),          # right\n",
-    "    ((1, np.pi + pihlf), ),  # down\n",
-    "    ((1, np.pi), ),          # left\n",
-    "    ((1, -pihlf), ),  # down\n",
-    "    ((1, -0), ),          # right\n",
-    "    ((1, -(np.pi + pihlf)), ),  # up\n",
-    "    ((1, -np.pi), ),          # right\n",
-    "    ((1, pihlf + 0.1), ),  # up\n",
-    "    ((1, 0.1), ),          # right\n",
-    "    ((1, np.pi + pihlf + 0.1), ),  # down\n",
-    "    ((1, np.pi + 0.1), ),          # left\n",
-    "    ((1, pihlf - 0.1), ),  # up\n",
-    "    ((1, -0.1), ),          # right\n",
-    "    ((1, np.pi + pihlf - 0.1), ),  # down\n",
-    "    ((1, np.pi - 0.1), ),          # left\n",
-    "    ((1, -(pihlf + 0.1)), ),  # down\n",
-    "    ((1, -0.1), ),          # right\n",
-    "    ((1, -(np.pi + pihlf + 0.1)), ),  # up\n",
-    "    ((1, -(np.pi + 0.1)), ),          # left\n",
-    ")\n",
+    "# lines = (\n",
+    "#     ((1, pihlf), ),  # up\n",
+    "#     ((1, 0), ),          # right\n",
+    "#     ((1, np.pi + pihlf), ),  # down\n",
+    "#     ((1, np.pi), ),          # left\n",
+    "#     ((1, -pihlf), ),  # down\n",
+    "#     ((1, -0), ),          # right\n",
+    "#     ((1, -(np.pi + pihlf)), ),  # up\n",
+    "#     ((1, -np.pi), ),          # right\n",
+    "#     ((1, pihlf + 0.1), ),  # up\n",
+    "#     ((1, 0.1), ),          # right\n",
+    "#     ((1, np.pi + pihlf + 0.1), ),  # down\n",
+    "#     ((1, np.pi + 0.1), ),          # left\n",
+    "#     ((1, pihlf - 0.1), ),  # up\n",
+    "#     ((1, -0.1), ),          # right\n",
+    "#     ((1, np.pi + pihlf - 0.1), ),  # down\n",
+    "#     ((1, np.pi - 0.1), ),          # left\n",
+    "#     ((1, -(pihlf + 0.1)), ),  # down\n",
+    "#     ((1, -0.1), ),          # right\n",
+    "#     ((1, -(np.pi + pihlf + 0.1)), ),  # up\n",
+    "#     ((1, -(np.pi + 0.1)), ),          # left\n",
+    "# )\n",
+    "\n",
+    "hori_deviations = []\n",
+    "vert_deviations = []\n",
     "\n",
     "for l in lines:\n",
     "    _, theta = l[0]\n",
@@ -279,22 +226,75 @@
     "    \n",
     "    assert 0 <= theta_norm < np.pi\n",
     "    \n",
-    "    vert_deviation = pihlf - theta_norm\n",
-    "    print(degrees(vert_deviation))\n",
+    "    hori_deviation = pihlf - theta_norm\n",
+    "    #print(degrees(vert_deviation))\n",
     "        \n",
-    "    if abs(vert_deviation) > pi4th:  # horizontal\n",
-    "        direction = 'h'\n",
-    "        deviation = vert_deviation - pihlf\n",
+    "    if abs(hori_deviation) > pi4th:  # vertical\n",
+    "        deviation = hori_deviation - pihlf\n",
     "        if deviation < -pihlf:\n",
     "            deviation += np.pi\n",
+    "        vert_deviations.append(-deviation)\n",
     "    else:\n",
-    "        direction = 'v'\n",
-    "        deviation = vert_deviation\n",
-    "    \n",
-    "    print(direction, degrees(theta), degrees(theta_norm), degrees(deviation))\n",
-    "    print()\n",
-    "    \n",
-    "    assert -pi4th <= deviation <= pi4th\n"
+    "        hori_deviations.append(-hori_deviation)\n",
+    "        \n",
+    "    #assert -pi4th <= deviation <= pi4th\n",
+    "\n",
+    "if hori_deviations:\n",
+    "    median_hori_dev = np.median(hori_deviations)\n",
+    "else:\n",
+    "    print('warning: no horizontal lines found!')\n",
+    "    median_hori_dev = 0\n",
+    "\n",
+    "if vert_deviations:\n",
+    "    median_vert_dev = np.median(vert_deviations)\n",
+    "else:\n",
+    "    median_vert_dev = 0\n",
+    "    print('warning: no vertical lines found!')\n",
+    "\n",
+    "degrees(median_hori_dev), degrees(median_vert_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, -0.012566284337315992)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ROT_THRESH = radians(0.5)\n",
+    "ROT_SAME_DIR_THRESH = radians(1)\n",
+    "\n",
+    "hori_rot_above_tresh = abs(median_hori_dev) > ROT_THRESH\n",
+    "vert_rot_above_tresh = abs(median_vert_dev) > ROT_THRESH\n",
+    "\n",
+    "rotation = None\n",
+    "vert_skew = None\n",
+    "hori_skew = None\n",
+    "if hori_rot_above_tresh and vert_rot_above_tresh:\n",
+    "    if abs(median_hori_dev - median_vert_dev) < ROT_SAME_DIR_THRESH:\n",
+    "        rotation = (median_hori_dev + median_vert_dev) / 2\n",
+    "    else:\n",
+    "        print('warning: horizontal / vertical rotation not in same direction (%f / %f)'\n",
+    "              % (degrees(median_hori_dev, median_vert_dev)))\n",
+    "elif hori_rot_above_tresh:\n",
+    "    hori_skew = median_hori_dev\n",
+    "elif vert_rot_above_tresh:\n",
+    "    vert_skew = median_vert_dev\n",
+    "#else:  # no rotation / skew\n",
+    "\n",
+    "rotation, vert_skew, hori_skew"
    ]
   },
   {
