progress on notebook

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -30,9 +30,9 @@
     "1. Extract the scanned page images and generate an XML with the OCR texts of the PDF with `pdftohtml`\n",
     "2. View the text boxes and scanned pages with *pdf2xml-viewer*\n",
     "3. Load the XML describing the pages and text boxes\n",
-    "4. Detect clusters of vertical lines using the image processing module of `pdftabextract`\n",
-    "5. Find page rotation or skew and fix it\n",
-    "6. Get column and line positions\n",
+    "4. Detect straight lines in the scanned pages, find out a possible page skew or rotation and fix it\n",
+    "5. Detect clusters of vertical lines for identifying the columns of a table\n",
+    "6. Find out the row positions of the table by analyzing the y-coordinates' distribution of text boxes\n",
     "7. Create a grid of columns and lines\n",
     "8. Match the text boxes into the grid and hence extract the tabular data in order to export it as Excel and CSV file"
    ]
@@ -228,7 +228,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 3. Load the XML describing the pages and text boxes\n",
     "\n",
@@ -237,9 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -250,16 +255,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now we can load the the XML, parse it and have a look at the third page (the page from which we later want to extract the data)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -275,18 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['xmlnode', 'number', 'height', 'image', 'width', 'texts'])"
+       "dict_keys(['texts', 'xmlnode', 'width', 'height', 'number', 'image'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,16 +309,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Each page consists of an *xmlnode* which points to the original XML page element, a page number, the page dimensions, an image (the scanned page) and the text boxes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -329,7 +346,7 @@
       "  'topright': array([ 404.,   93.]),\n",
       "  'value': 'Baden',\n",
       "  'width': 45,\n",
-      "  'xmlnode': <Element 'text' at 0x7fb36590e9a8>},\n",
+      "  'xmlnode': <Element 'text' at 0x7ff62004c0e8>},\n",
       " {'bottom': 104.0,\n",
       "  'bottomleft': array([ 737.,  104.]),\n",
       "  'bottomright': array([ 745.,  104.]),\n",
@@ -341,7 +358,7 @@
       "  'topright': array([ 745.,   91.]),\n",
       "  'value': '3',\n",
       "  'width': 8,\n",
-      "  'xmlnode': <Element 'text' at 0x7fb36590e9f8>},\n",
+      "  'xmlnode': <Element 'text' at 0x7ff62004c138>},\n",
       " {'bottom': 144.0,\n",
       "  'bottomleft': array([  58.,  144.]),\n",
       "  'bottomright': array([  76.,  144.]),\n",
@@ -353,7 +370,7 @@
       "  'topright': array([  76.,  136.]),\n",
       "  'value': 'Ein\\xad',\n",
       "  'width': 18,\n",
-      "  'xmlnode': <Element 'text' at 0x7fb36590ea98>}]\n"
+      "  'xmlnode': <Element 'text' at 0x7ff62004c1d8>}]\n"
      ]
     }
    ],
@@ -373,10 +390,136 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The text boxes in `p['texts']` contain the coordinates and dimensions of each text box as well as the content (`value`) and a reference to the original XML node."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Detect straight lines in the scanned pages, find out a possible page skew or rotation and fix it\n",
+    "\n",
+    "We can see on the scanned page image, that columns and table headers are marked with straight lines. We can detect these in order to a) find out if and how much the page is skewed or rotated and b) later use the detected vertical lines to estimate the position of the columns in the table.\n",
+    "\n",
+    "In order to do so, we can use the image processing module (`pdftabextract.imgproc`) which uses [OpenCV's Hough transform](http://docs.opencv.org/2.4/doc/tutorials/imgproc/imgtrans/hough_lines/hough_lines.html) to detect the lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page 3: detecting lines in image file 'data/ALA1934_RR-excerpt.pdf-3_1.png'...\n",
+      "> found 69 lines\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from pdftabextract import imgproc\n",
+    "\n",
+    "# get the image file of the scanned page\n",
+    "imgfilebasename = p['image'][:p['image'].rindex('.')]\n",
+    "imgfile = os.path.join(DATAPATH, p['image'])\n",
+    "\n",
+    "print(\"page %d: detecting lines in image file '%s'...\" % (p_num, imgfile))\n",
+    "\n",
+    "# create an image processing object with the scanned page\n",
+    "iproc_obj = imgproc.ImageProc(imgfile)\n",
+    "\n",
+    "# calculate the scaling of the image file in relation to the text boxes coordinate system dimensions\n",
+    "page_scaling_x = iproc_obj.img_w / p['width']   # scaling in X-direction\n",
+    "page_scaling_y = iproc_obj.img_h / p['height']  # scaling in Y-direction\n",
+    "\n",
+    "# detect the lines\n",
+    "lines_hough = iproc_obj.detect_lines(canny_kernel_size=3, canny_low_thresh=50, canny_high_thresh=150,\n",
+    "                                     hough_rho_res=1,\n",
+    "                                     hough_theta_res=np.pi/500,\n",
+    "                                     hough_votes_thresh=round(0.2 * iproc_obj.img_w))\n",
+    "print(\"> found %d lines\" % len(lines_hough))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The important thing is that we created an `ImageProc` instance using the scanned page image file that is referred to in the `image` key of the page `p`. ImageProc will identify the dimensions of the image file which allows us to calculate the scaling between the image dimensions and the text boxes coordinate system. It is important to understand that coordinate system in image space has a different scaling than the coordinate system used to position the text boxes. For example, the image could be scanned with a size of 1000x3000 pixels (`iproc_obj.img_w` by `iproc_obj.img_h`) while the text boxes of a page are positioned on a canvas of size 500x1500 units (`p['width']` by `p['height']`).\n",
+    "\n",
+    "Now the most crucial step is to detect the lines and use the right parameters for the image processing step. At first, our image will be converted into a binary image with white pixels marking the edges in the image (i.e. the regions with a big change in color intensity) and black pixels showing regions of homogenous color, i.e. low change in color intensity. To achieve this, the [Canny algorithm](http://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_canny/py_canny.html) is used. The kernel size is the size of the [Gaussian Filter](https://en.wikipedia.org/wiki/Canny_edge_detector#Gaussian_filter) used to smooth the image and remove pixel noise. The low and high thresholds are used for detecting \"strong\" and \"weak\" edge pixels during [Hysteresis Thresholding](https://en.wikipedia.org/wiki/Canny_edge_detector#Double_threshold).\n",
+    "\n",
+    "After this, the actual Hough transform is taking place. All white pixels (i.e. edge pixels) are transformed into \"Hough space\" which is a descrete approximation of a [polar coordinate system](https://en.wikipedia.org/wiki/Polar_coordinate_system) with *theta* being the polar angle and *rho* being the distance from the origin or \"pole\". This Hough space can be seen as a 2D map with *theta* being on the y-axis and *rho* on the x-axis. The map must have a certain resolution or size which is given by `hough_rho_res` and `hough_theta_res`. During Hough transform, each edge pixel *p* is then converted to polar coordinate space and *n = PI / `hough_theta_res`* lines (in the above example 500 lines) are simulated to pass through that pixel in *n* different degrees. This forms a sinusoid which will intersect with other sinusoids when other edge pixels are on the same straight line (because this pixels share the same angle or *theta* and distance or *rho* of this straight line). So for each edge pixel, a number of potential lines going through that pixel is simulated and then accumulated on the Hough space map, a process which is called *voting*. The more intersections appear on a certain spot in the Hough map the higher is the *vote*. All votes that are above a certain threshold here given by `hough_votes_thresh` are then considered being straight lines.\n",
+    "\n",
+    "So `hough_theta_res` defines the minimum line angle that can be detected (in our case: *PI/500 = 0.36°*) and `hough_rho_res` the minimum distance delta. `hough_votes_thresh` is the minimum number of intersections (and hence about the number edge pixels on a straight line) in the Hough map for a straight line to be detected as such.\n",
+    "\n",
+    "We should now have a look at the detected lines in order to verify that we chose the right parameters. But at first, let's define a helper function for that because we will need it another time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# helper function to save an image \n",
+    "def save_image_w_lines(iproc_obj, imgfilebasename):\n",
+    "    img_lines = iproc_obj.draw_lines(orig_img_as_background=True)\n",
+    "    img_lines_file = os.path.join(OUTPUTPATH, '%s-lines.png' % imgfilebasename)\n",
+    "    \n",
+    "    print(\"> saving image with detected lines to '%s'\" % img_lines_file)\n",
+    "    cv2.imwrite(img_lines_file, img_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> saving image with detected lines to 'generated_output/ALA1934_RR-excerpt.pdf-3_1-lines.png'\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_image_w_lines(iproc_obj, imgfilebasename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is our image with the detected lines:\n",
+    "\n",
+    "![image after Hough transform](generated_output/ALA1934_RR-excerpt.pdf-3_1-lines.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
