correct image output file name

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +478,7 @@
     "# helper function to save an image \n",
     "def save_image_w_lines(iproc_obj, imgfilebasename):\n",
     "    img_lines = iproc_obj.draw_lines(orig_img_as_background=True)\n",
-    "    img_lines_file = os.path.join(OUTPUTPATH, '%s-lines.png' % imgfilebasename)\n",
+    "    img_lines_file = os.path.join(OUTPUTPATH, '%s-lines-orig.png' % imgfilebasename)\n",
     "    \n",
     "    print(\"> saving image with detected lines to '%s'\" % img_lines_file)\n",
     "    cv2.imwrite(img_lines_file, img_lines)"
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -495,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> saving image with detected lines to 'generated_output/ALA1934_RR-excerpt.pdf-3_1-lines.png'\n"
+      "> saving image with detected lines to 'generated_output/ALA1934_RR-excerpt.pdf-3_1-lines-orig.png'\n"
      ]
     }
    ],
@@ -509,7 +509,7 @@
    "source": [
     "This is our image with the detected lines:\n",
     "\n",
-    "![image after Hough transform](generated_output/ALA1934_RR-excerpt.pdf-3_1-lines.png)"
+    "![image after Hough transform](generated_output/ALA1934_RR-excerpt.pdf-3_1-lines-orig.png)"
    ]
   },
   {
