progress on notebook

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -510,6 +510,99 @@
     "This is our image with the detected lines:\n",
     "\n",
     "![image after Hough transform](generated_output/ALA1934_RR-excerpt.pdf-3_1-lines-orig.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the horizontal lines (green) are not straight, whereas the vertical lines (red) are. This means that the page is skewed so that the text boxes in the left are slightly shifted down in relation to those on the right of the same row (this can also be seen in pdf2xml-viewer). In such a dense table, this would bring serious problems during row detection, so we will need to fix this. The method `find_rotation_or_skew` can be used for that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> deskewing in direction 'sy' by 0.719995°\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import radians, degrees\n",
+    "\n",
+    "from pdftabextract.common import ROTATION, SKEW_X, SKEW_Y\n",
+    "from pdftabextract.geom import pt\n",
+    "from pdftabextract.textboxes import rotate_textboxes, deskew_textboxes\n",
+    "\n",
+    "# find rotation or skew\n",
+    "# the parameters are:\n",
+    "# 1. the minimum threshold in radians for a rotation to be counted as such\n",
+    "# 2. the maximum threshold for the difference between horizontal and vertical line rotation (to detect skew)\n",
+    "# 3. an optional threshold to filter out \"stray\" lines whose angle is too far apart from the median angle of\n",
+    "#    all other lines that go in the same direction (no effect here)\n",
+    "rot_or_skew_type, rot_or_skew_radians = iproc_obj.find_rotation_or_skew(radians(0.5),    # uses \"lines_hough\"\n",
+    "                                                                        radians(1),\n",
+    "                                                                        omit_on_rot_thresh=radians(0.5))\n",
+    "\n",
+    "# rotate back or deskew text boxes\n",
+    "needs_fix = True\n",
+    "if rot_or_skew_type == ROTATION:\n",
+    "    print(\"> rotating back by %f°\" % -degrees(rot_or_skew_radians))\n",
+    "    rotate_textboxes(p, -rot_or_skew_radians, pt(0, 0))\n",
+    "elif rot_or_skew_type in (SKEW_X, SKEW_Y):\n",
+    "    print(\"> deskewing in direction '%s' by %f°\" % (rot_or_skew_type, -degrees(rot_or_skew_radians)))\n",
+    "    deskew_textboxes(p, -rot_or_skew_radians, rot_or_skew_type, pt(0, 0))\n",
+    "else:\n",
+    "    needs_fix = False\n",
+    "    print(\"> no page rotation / skew found\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that a skew in direction *sy* (meaning vertical direction) is detected. To fix this, `deskew_textboxes` is called with our page `p` as first parameter, then the negated skew (negated in order to \"skew back\"), the skew type (direction) and the origin point about which the deskewing is done (top left corner).\n",
+    "\n",
+    "We fixed the text boxes in the XML, but we should also fix the actual lines that were detected. This can be done with the method `apply_found_rotation_or_skew`. Additionally, we save the image with the repaired lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> saving image with detected lines to 'generated_output/ALA1934_RR-excerpt.pdf-3_1-repaired-lines-orig.png'\n"
+     ]
+    }
+   ],
+   "source": [
+    "if needs_fix:\n",
+    "    # rotate back or deskew detected lines\n",
+    "    lines_hough = iproc_obj.apply_found_rotation_or_skew(rot_or_skew_type, -rot_or_skew_radians)\n",
+    "\n",
+    "    save_image_w_lines(iproc_obj, imgfilebasename + '-repaired')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image with repaired lines](generated_output/ALA1934_RR-excerpt.pdf-3_1-repaired-lines-orig.png)\n",
+    "\n",
+    "As we can see, the only the horizontal lines are straightened. Please note that the deskewing is not applied to the original image because this is not necessary for our further processing and hence the repaired lines are now a bit off from the table borders in the original image."
    ]
   },
   {
