progress on notebook

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -602,7 +602,135 @@
    "source": [
     "![image with repaired lines](generated_output/ALA1934_RR-excerpt.pdf-3_1-repaired-lines-orig.png)\n",
     "\n",
-    "As we can see, the only the horizontal lines are straightened. Please note that the deskewing is not applied to the original image because this is not necessary for our further processing and hence the repaired lines are now a bit off from the table borders in the original image."
+    "As we can see, the only the horizontal lines are straightened. Please note that the deskewing is not applied to the original image because this is not necessary for our further processing and hence the repaired lines are now a bit off from the table borders in the original image.\n",
+    "\n",
+    "We should also save the corrected text boxes' XML so that we can inspect it in pdf2xml-viewer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving repaired XML file to 'generated_output/ALA1934_RR-excerpt.pdf.repaired.xml'...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save repaired XML (i.e. XML with deskewed textbox positions)\n",
+    "output_files_basename = INPUT_XML[:INPUT_XML.rindex('.')]\n",
+    "repaired_xmlfile = os.path.join(OUTPUTPATH, output_files_basename + '.repaired.xml')\n",
+    "\n",
+    "print(\"saving repaired XML file to '%s'...\" % repaired_xmlfile)\n",
+    "xmltree.write(repaired_xmlfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Detect clusters of vertical lines for identifying the columns of a table\n",
+    "\n",
+    "We now want to identify the columns of the table on our page. We already obtained the vertical lines by the means of image processing. Now as there are always many close lines detected for single column separator line, we need to cluster these sets of close lines so that we can later calculate the column positions.\n",
+    "\n",
+    "We can use the `find_clusters` method to which we need to pass the direction of lines that we want to cluster (vertical lines) and a clustering method. Here, we will use a simple technique that orders the lines and arranges them to separate clusters when the gap between them is too big (i.e. exceeds `dist_thresh`). We use the half of the minimum column width for this threshold. We can measure this minimum column width in advance with a .\n",
+    "You can also use other, more sophisticated clustering techniques here too, which are implemented in `pdftabextract.clustering`, e.g. hierarchical clustering. But usually this approach here is sufficient."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> found 17 clusters\n",
+      "> saving image with detected vertical clusters to 'generated_output/ALA1934_RR-excerpt.pdf-3_1-vertical-clusters.png'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pdftabextract.clustering import find_clusters_1d_break_dist\n",
+    "\n",
+    "MIN_COL_WIDTH = 60 # minimum width of a column in pixels, measured in the scanned pages\n",
+    "\n",
+    "# cluster the detected *vertical* lines using find_clusters_1d_break_dist as simple clustering function\n",
+    "# (break on distance MIN_COL_WIDTH/2)\n",
+    "# additionaly, remove all cluster sections that are considered empty\n",
+    "# a cluster is considered empty when the number of text boxes in it is below 10% of the median number of text boxes\n",
+    "# per cluster section\n",
+    "vertical_clusters = iproc_obj.find_clusters(imgproc.DIRECTION_VERTICAL, find_clusters_1d_break_dist,\n",
+    "                                            remove_empty_cluster_sections_use_texts=p['texts'], # use this page's textboxes\n",
+    "                                            remove_empty_cluster_sections_n_texts_ratio=0.1,    # 10% rule\n",
+    "                                            remove_empty_cluster_sections_scaling=page_scaling_x,  # the positions are in \"scanned image space\" -> we scale them to \"text box space\"\n",
+    "                                            dist_thresh=MIN_COL_WIDTH/2)\n",
+    "print(\"> found %d clusters\" % len(vertical_clusters))\n",
+    "\n",
+    "# draw the clusters\n",
+    "img_w_clusters = iproc_obj.draw_line_clusters(imgproc.DIRECTION_VERTICAL, vertical_clusters)\n",
+    "save_img_file = os.path.join(OUTPUTPATH, '%s-vertical-clusters.png' % imgfilebasename)\n",
+    "print(\"> saving image with detected vertical clusters to '%s'\" % save_img_file)\n",
+    "cv2.imwrite(save_img_file, img_w_clusters)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we see the detected clusters marked with different colors:\n",
+    "\n",
+    "![vertical clusters of p.3](generated_output/ALA1934_RR-excerpt.pdf-3_1-vertical-clusters.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we simple calculate the centers of the clusters, by default taking the median of the cluster values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found 17 column borders:\n",
+      "[108.89662847819915, 257.0, 974.11404956463559, 1115.2309342518365, 1184.0, 1257.0, 1329.0, 1400.0, 1469.0, 1541.8215342450189, 1611.0317981436788, 1680.2420620423386, 1753.1217572959686, 1832.1225131650576, 1920.2468099566324, 1991.2481817415478, 2058.1247668984684]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pdftabextract.clustering import calc_cluster_centers_1d\n",
+    "\n",
+    "col_positions = calc_cluster_centers_1d(vertical_clusters)\n",
+    "print('found %d column borders:' % len(col_positions))\n",
+    "print(col_positions)"
    ]
   },
   {
